# -

./: .flake8  README.md  generate_dummy_csv.py  opti.py  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
retard-avion-data/primary/data/: part-00000.csv
src/retardavion/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/retardavion/ml/: mlflow_setup.py
src/retardavion/pipelines/data_loading/: __init__.py  nodes.py  pipeline.py
src/retardavion/pipelines/data_processing/: nodes.py  pipeline.py
src/retardavion/pipelines/data_science/: nodes.py
src/retardavion/pipelines/data_training/: nodes.py  pipeline.py
src/retardavion/pipelines/reporting/: nodes.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/data_test/: conftest.py  test_nodes.py  test_pipeline.py
